--- a/criteria-filter.cabal
+++ b/criteria-filter.cabal
@@ -18,6 +18,8 @@ library
   exposed-modules:     Lib
   build-depends:       base >= 4.7 && < 5
                      , pandoc-types
+--                      , pandoc -- Use the binary; walk raw Pandoc!
+                          -- Yay, t'werks
   default-language:    Haskell2010
 
 executable criteria-filter-exe
