--- a/criteria-filter.cabal
+++ b/criteria-filter.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     Lib
   build-depends:       base >= 4.7 && < 5
                      , pandoc-types
+                     , flow
 --                      , pandoc -- Use the binary; walk raw Pandoc!
                           -- Yay, t'werks
   default-language:    Haskell2010
